Bug #37338 Api disconnect (or unsubscribe) during SUMA nf-handling, can lead to sp100-hang
Submitted: 11 Jun 2008 12:19 Modified: 2 Jul 2008 18:42
Reporter: Jonas Oreland Email Updates:
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version: OS:Any
Assigned to: Jonas Oreland Target Version:

[11 Jun 2008 12:19] Jonas Oreland
Description:
when API disconnect (and hence SUB_GCP_COMPLETE_REP will not be sent)
and buffer is partially full and a node fails.

then the resend can fail (hang forever)
causing node restart to hang.

How to repeat:
run new test prg

Suggested fix:
add gci to buffer if resend is ongoing
compute correct gci interval to resend
(it is currently correct, unless all api nodes has disconnected)
[11 Jun 2008 19:49] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/47755

2622 jonas@mysql.com	2008-06-11
      ndb - bug#37338
        Fix weird case with node failure and api failure
        cause subsequent node restart to fail
[2 Jul 2008 6:59] Jonas Oreland
disconnect (or unsubscribe) during SUMA nf-handling, can lead to sp100-ha
[2 Jul 2008 18:42] Jon Stephens
Documented fix in NDB 6.2.16 and 6.3.16 changelogs.
[12 Dec 2008 23:27] Bugs System
Pushed into 6.0.6-alpha  (revid:jonas@mysql.com-20080611194915-dv2aytywy37rfd6q) (version source revid:jonas@mysql.com-20080812185642-1nevjb94zj621dqx) (pib:5)