ndb - bug#37338   Fix weird case with node failure and api failure   cause subsequent node restart to fail